--- a/index.html
+++ b/index.html
@@ -2,38 +2,25 @@
 <html lang="es">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>RC (WFS) → Center EB map</title>
+<title>RC → URL Experience (auto-center)</title>
 <style>
   body{font-family:system-ui,Segoe UI,Arial;margin:16px}
   .row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
   input{padding:8px 10px;border:1px solid #ccc;border-radius:8px}
-  input[type="text"]{flex:1;min-width:240px}
+  input[type="text"]{flex:1;min-width:260px}
   button{padding:8px 12px;border:0;border-radius:8px;background:#1f6feb;color:#fff;cursor:pointer}
   #estado{margin-top:10px;color:#555}
-  #coords{margin-top:12px;padding:10px;border:1px solid #e5e7eb;border-radius:10px;background:#fafafa;display:none}
   #debug{margin-top:10px;font:12px/1.3 monospace;color:#666;white-space:pre-wrap}
 </style>
 
-<h3>Buscar RC (WFS) y centrar tu Experience Builder</h3>
+<h3>Buscar RC y abrir tu Experience centrado</h3>
 
 <div class="row">
-  <input id="appUrl" placeholder="URL de tu Experience (p.ej. https://experience.arcgis.com/experience/XXXXX)">
-  <input id="mapId"  placeholder="ID del Map widget (por defecto map_1)" value="map_1" style="max-width:220px">
-</div>
-
-<div class="row" style="margin-top:8px">
-  <input id="refcat" placeholder="RC: 212345A12345678 (14) o 12345A123456789012AB" pattern="[A-Za-z0-9]{10,25}" required>
-  <button id="btnBuscar">Buscar y centrar</button>
+  <input id="refcat" placeholder="RC: 12345A12345678 (14) o 12345A123456789012AB (20)" pattern="[A-Za-z0-9]{10,25}" required>
+  <button id="btnBuscar">Buscar y abrir mapa</button>
 </div>
 
 <div id="estado"></div>
-
-<div id="coords">
-  <div><b>ReferencePoint_ES</b></div>
-  <div>EPSG:3857 → <span id="p3857"></span></div>
-  <div>EPSG:4326 → <span id="p4326"></span> (lon,lat)</div>
-</div>
-
 <details style="margin-top:10px">
   <summary>Depuración</summary>
   <div id="debug"></div>
@@ -41,27 +28,39 @@
 
 <script>
 (function(){
-  // ==== 1) PROXY CORS ====
-  // Pon aquí tu Cloudflare Worker si lo tienes (debe acabar en ?url=). Si no, queda un fallback de pruebas.
+  // === 1) CONFIGURA AQUÍ TU EXPERIENCE Y PARÁMETROS DEL MAPA ===
+  // Base de tu Experience (sin hash). Usa exactamente la tuya:
+  const experienceBase = 'https://experience.arcgis.com/experience/1258b2419aef4949bc929e9f25905a25';
+
+  // ID del widget de mapa (en tu URL aparece como "widget_6=...")
+  const mapWidgetId = 'widget_6';
+
+  // dataSource a activar (en tu ejemplo: dataSource_5)
+  const dataSourceId = 'dataSource_5';
+
+  // Escala/Nivel/Rotación deseados (igual que tu ejemplo)
+  const defaultScale = 4000;
+  const level = -1;
+  const rotation = 0;
+
+  // layer_visibility EXACTAMENTE como tu ejemplo (puedes ampliar si quieres)
+  const layerVisibilityObj = {
+    "widget_6-dataSource_5": {
+      "widget_6-dataSource_5-199d57332c4-layer-37-199d57334ec-layer-45": true
+    }
+  };
+
+  // === 2) PROXY CORS (recomendado Cloudflare Worker) ===
+  // Si tienes Worker propio, pégalo aquí (debe acabar en ?url=). Si no, queda fallback de pruebas.
   const workerProxy  = 'https://ivio.irodriguezdiputacio.workers.dev/?url='; // ej: 'https://tu-proxy.worker.dev/?url='
-  const fallbackProxy = 'https://thingproxy.freeboard.io/fetch/'; // solo pruebas (no estable)
+  const fallbackProxy = 'https://thingproxy.freeboard.io/fetch/'; // solo pruebas
   const proxy = workerProxy || fallbackProxy;
   const wrap  = url => proxy + encodeURIComponent(url);
 
-  // ==== 2) UTILIDADES ====
+  // === 3) UTILIDADES ===
   const q = id => document.getElementById(id);
   const estado = q('estado'), debug = q('debug');
-  const p3857 = q('p3857'), p4326 = q('p4326'), divC = q('coords');
-
   const setEstado = t => estado.textContent = t || '';
-
-  // reproyección 3857 → 4326
-  function wmTo4326(x, y){
-    const R=6378137;
-    const lon=(x/R)*180/Math.PI;
-    const lat=(2*Math.atan(Math.exp(y/R))-Math.PI/2)*180/Math.PI;
-    return {lon,lat};
-  }
 
   async function fetchText(url){
     const res = await fetch(wrap(url));
@@ -69,70 +68,95 @@
     return res.text();
   }
 
-  // Toma ReferencePoint_ES → gml:pos x y (EPSG:3857)
+  // Extrae ReferencePoint_ES (gml:pos x y) en EPSG:3857 del XML
   function getReferencePoint(xml){
+    // 1) ReferencePoint -> gml:pos
     let m = xml.match(/<[^>]*ReferencePoint[^>]*>[\s\S]*?<[^:>]*:?pos[^>]*>([^<]+)<\/[^:>]*:?pos>/i);
     if(m){
       const [x,y] = m[1].trim().split(/\s+/).map(Number);
       if(Number.isFinite(x)&&Number.isFinite(y)) return {x,y};
     }
-    // Alternativa: primer gml:Point/gml:pos
+    // 2) Primer Point -> pos
     m = xml.match(/<[^>]*:?Point[^>]*>[\s\S]*?<[^:>]*:?pos[^>]*>([^<]+)<\/[^:>]*:?pos>/i);
     if(m){
       const [x,y] = m[1].trim().split(/\s+/).map(Number);
       if(Number.isFinite(x)&&Number.isFinite(y)) return {x,y};
     }
+    // 3) Centroid aproximado de posList (por si faltara el punto)
+    m = xml.match(/<[^>]*:?posList[^>]*>([^<]+)<\/[^:>]*:?posList>/i);
+    if(m){
+      const nums = m[1].trim().split(/\s+/).map(Number).filter(n=>Number.isFinite(n));
+      let sx=0, sy=0, c=0;
+      for(let i=0;i+1<nums.length;i+=2){ sx+=nums[i]; sy+=nums[i+1]; c++; }
+      if(c>0) return {x:sx/c, y:sy/c};
+    }
     return null;
   }
 
-  // ==== 3) BÚSQUEDA Y CENTRADO ====
-  async function buscar(){
-    const appUrl = (q('appUrl').value||'').trim();
-    const mapId  = (q('mapId').value||'map_1').trim();
-    const rc     = (q('refcat').value||'').trim();
+  // Construye el hash de URL exactamente como tu ejemplo, sustituyendo X,Y
+  function buildHash(x, y){
+    const centerVal = encodeURIComponent(`${x},${y},102100`);
+    const viewpoint = {
+      rotation,
+      scale: defaultScale,
+      targetGeometry: {
+        spatialReference: { latestWkid: 3857, wkid: 102100 },
+        x: x,
+        y: y
+      }
+    };
+    const viewpointEnc = encodeURIComponent(JSON.stringify(viewpoint));
+    const layerVisEnc  = encodeURIComponent(JSON.stringify(layerVisibilityObj));
 
-    if(!rc){ setEstado('Introduce una RC.'); return; }
-    if(!appUrl){ setEstado('Introduce la URL de tu Experience.'); return; }
+    // Orden de parámetros siguiendo tu modelo:
+    // widget_6=active_datasource_id:dataSource_5,center:X%2CY%2C102100,scale:3906.25,level:-1,rotation:0,viewpoint:{...},layer_visibility:{...}
+    const parts = [
+      `${mapWidgetId}=active_datasource_id:${dataSourceId}`,
+      `center:${centerVal}`,
+      `scale:${defaultScale}`,
+      `level:${level}`,
+      `rotation:${rotation}`,
+      `viewpoint:${viewpointEnc}`,
+      `layer_visibility:${layerVisEnc}`
+    ];
+    return parts.join(',');
+  }
+
+  // === 4) FLUJO PRINCIPAL ===
+  async function buscar(){
+    const rc = (q('refcat').value||'').trim();
+    if(!rc){ setEstado('Introduce una referencia catastral.'); return; }
 
     setEstado('Consultando WFS (GetParcel por REFCAT)…');
-    divC.style.display='none'; debug.textContent='';
+    debug.textContent = '';
 
+    // WFS 2.0 GetParcel por REFCAT (EPSG:3857)
     const wfs = `http://ovc.catastro.meh.es/INSPIRE/wfsCP.aspx?service=wfs&version=2&request=getfeature&STOREDQUERIE_ID=GetParcel&srsname=EPSG:3857&REFCAT=${encodeURIComponent(rc)}`;
 
     try{
       const xml = await fetchText(wfs);
-      debug.textContent = xml.substring(0, 6000);
+      debug.textContent = xml.substring(0,8000);
 
       const pt = getReferencePoint(xml);
       if(!pt){ setEstado('No se encontró ReferencePoint_ES para esa RC.'); return; }
 
-      // Mostrar coords
       const {x,y} = pt;
-      const {lon,lat} = wmTo4326(x,y);
-      p3857.textContent = `${x.toFixed(2)}, ${y.toFixed(2)}`;
-      p4326.textContent = `${lon.toFixed(6)}, ${lat.toFixed(6)}`;
-      divC.style.display = 'block';
+      const hash = buildHash(x, y);
+      const sep  = experienceBase.includes('#') ? '&' : '#';
+      const url  = `${experienceBase}${sep}${hash}`;
 
-      // Construir URL con parámetros del Map widget:
-      //   #<mapId>=center:<x,y,wkid>,level:<n>
-      // OJO: x,y,wkid deben ir codificados (comas %2C)
-      const centerVal = encodeURIComponent(`${x},${y},3857`);
-      const hashPart  = `${mapId}=center:${centerVal},level:19`;
-      const sep       = appUrl.includes('#') ? '&' : '#';
-      const targetUrl = `${appUrl}${sep}${hashPart}`;
-
-      setEstado('Centrando el mapa de tu Experience…');
-      // Redirigir la app padre (iframe) a la misma Experience con el hash que centra el mapa
-      window.top.location.href = targetUrl;
+      setEstado('Abriendo tu Experience centrado…');
+      // Abrimos en el mismo top (por si está embebido en EB)
+      window.top.location.href = url;
 
     }catch(e){
       console.error(e);
-      setEstado('Error (CORS/proxy o servicio WFS). Revisa el proxy.');
+      setEstado('Error (CORS/proxy o servicio WFS). Revisa el proxy configurado.');
     }
   }
 
-  q('btnBuscar').addEventListener('click', buscar);
-  q('refcat').addEventListener('keydown', e=>{ if(e.key==='Enter') buscar(); });
+  document.getElementById('btnBuscar').addEventListener('click', buscar);
+  document.getElementById('refcat').addEventListener('keydown', e=>{ if(e.key==='Enter') buscar(); });
 })();
 </script>
 </html>
