--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>RC → URL Experience (auto-center)</title>
+<title>Cerca referència cadastral</title>
 <style>
   body{font-family:system-ui,Segoe UI,Arial;margin:16px}
   .row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
@@ -13,18 +13,14 @@
   #debug{margin-top:10px;font:12px/1.3 monospace;color:#666;white-space:pre-wrap}
 </style>
 
-<h3>Buscar RC y abrir tu Experience centrado</h3>
+<h3>Cerca referència cadastral</h3>
 
 <div class="row">
   <input id="refcat" placeholder="RC: 12345A12345678 (14) o 12345A123456789012AB (20)" pattern="[A-Za-z0-9]{10,25}" required>
-  <button id="btnBuscar">Buscar y abrir mapa</button>
+  <button id="btnBuscar">Cerca</button>
 </div>
 
 <div id="estado"></div>
-<details style="margin-top:10px">
-  <summary>Depuración</summary>
-  <div id="debug"></div>
-</details>
 
 <script>
 (function(){
