--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   body{font-family:system-ui,Segoe UI,Arial;margin:16px}
   .row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
   input{padding:8px 10px;border:1px solid #ccc;border-radius:8px}
-  input[type="text"]{flex:1;min-width:600px}
+  input[type="text"]{flex:1;width:600px}
   button{padding:8px 12px;border:0;border-radius:8px;background:#1f6feb;color:#fff;cursor:pointer}
   #estado{margin-top:10px;color:#555}
   #debug{margin-top:10px;font:12px/1.3 monospace;color:#666;white-space:pre-wrap}
