--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   body{font-family:system-ui,Segoe UI,Arial;margin:16px}
   .row{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
   input{padding:8px 10px;border:1px solid #ccc;border-radius:8px}
-  input[type="text"]{flex:1;width:600px}
+  input[type="text"]{flex:1;min-width:250px}
   button{padding:8px 12px;border:0;border-radius:8px;background:#1f6feb;color:#fff;cursor:pointer}
   #estado{margin-top:10px;color:#555}
   #debug{margin-top:10px;font:12px/1.3 monospace;color:#666;white-space:pre-wrap}
 </style>
 
-<h3>Referència cadastral</h3>
+<h3>Referència cadastral:</h3>
 
 <div class="row">
-  <input id="refcat" placeholder="12345A12345678 (14) o 12345A123456789012AB (20)" pattern="[A-Za-z0-9]{10,25}" required>
+  <input id="refcat" pattern="[A-Za-z0-9]{10,25}" required>
   <button id="btnBuscar">Cerca</button>
 </div>
 
