--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   #debug{margin-top:10px;font:12px/1.3 monospace;color:#666;white-space:pre-wrap}
 </style>
 
-<h3>Referència cadastral:</h3>
+<h3>Referència cadastral</h3>
 
 <div class="row">
   <input id="refcat" pattern="[A-Za-z0-9]{10,25}" required>
@@ -111,13 +111,14 @@
   // === 4) FLUJO PRINCIPAL ===
   async function buscar(){
     const rc = (q('refcat').value||'').trim();
-    if(!rc){ setEstado('Introduce una referencia catastral.'); return; }
+    if(!rc){ setEstado('Introdueix una referència cadastral.'); return; }
 
-    setEstado('Consultando WFS (GetParcel por REFCAT)…');
+    setEstado('Consultant referència cadastral...');
     debug.textContent = '';
 
     // WFS 2.0 GetParcel por REFCAT (EPSG:3857)
-    const wfs = `http://ovc.catastro.meh.es/INSPIRE/wfsCP.aspx?service=wfs&version=2&request=getfeature&STOREDQUERIE_ID=GetParcel&srsname=EPSG:3857&REFCAT=${encodeURIComponent(rc)}`;
+    const wfs = `https://ovc.catastro.meh.es/INSPIRE/wfsCP.aspx?service=wfs&version=2&request=getfeature&STOREDQUERIE_ID=GetParcel&srsname=EPSG:3857&REFCAT=${encodeURIComponent(rc)}`;
+
 
     try{
       const xml = await fetchText(wfs);
@@ -131,13 +132,13 @@
       const sep  = experienceBase.includes('#') ? '&' : '#';
       const url  = `${experienceBase}${sep}${hash}`;
 
-      setEstado('Abriendo tu Experience centrado…');
+      setEstado('Obrint el visor centrat a la referència cadastral…');
       // Abrimos en el mismo top (por si está embebido en EB)
-      window.top.location.href = url;
+      window.location.href = url;
 
     }catch(e){
       console.error(e);
-      setEstado('Error (CORS/proxy o servei WFS). Revisa el proxy configurat.');
+      setEstado('Error del CORS/proxy o el servei WFS.');
     }
   }
 
