--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="row">
   <input id="refcat" pattern="[A-Za-z0-9]{10,25}" required>
-  <button id="btnBuscar">Cerca</button>
+  <button id="btnBuscar">Cerca.</button>
 </div>
 
 <div id="estado"></div>
