--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
       setEstado('Obrint el visor centrat a la referència cadastral…');
       // Abrimos en el mismo top (por si está embebido en EB)
-      window.top.location.href = url; // antes: window.location.href = url; // antes: window.top.location.href = url;
+      window.open(url, '_blank'); // antes: window.location.href = url; // no funciona: window.top.location.href = url;
 
     }catch(e){
       console.error(e);
