Update button label and improve error messages

--- a/index.html
+++ b/index.html
@@ -15,14 +15,10 @@
 
 <div class="row">
   <input id="refcat" pattern="[A-Za-z0-9]{10,25}" required>
-  <button id="btnBuscar">Cerca (v3)</button>
+  <button id="btnBuscar">Cerca (v4)</button>
 </div>
 
 <div id="estado"></div>
-<details style="margin-top:10px">
-  <summary>codi rebut</summary>
-  <div id="debug"></div>
-</details>
 
 <script>
 (function(){
@@ -123,16 +119,16 @@
       debug.textContent = xml.substring(0,8000);
 
       const pt = getReferencePoint(xml);
-      if(!pt){ setEstado('No s`ha trobat la geometria de la referència cadastral.'); return; }
+      if(!pt){ setEstado('No s\'ha trobat la referència cadastral.'); return; }
 
       const {x,y} = pt;
       const hash = buildHash(x, y);
       const sep  = experienceBase.includes('#') ? '&' : '#';
       const url  = `${experienceBase}${sep}${hash}`;
 
-      setEstado('Obrint el visor centrat a la referència cadastral…');
+      setEstado('Obrint el visor centrat a la referència cadastral...');
       // Abrimos en el mismo top (por si está embebido en EB)
-      window.open(url, '_blank'); // antes: window.location.href = url; // no funciona: window.top.location.href = url;
+      window.location.href = url // no funciona: window.top.location.href = url; y window.open(url, '_blank');
 
     }catch(e){
       console.error(e);
