Update button version and add details section
Updated button label from 'Cerca (v6)' to 'Cerca (v7)' and added details section for received code.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
 
 <div class="row">
   <input id="refcat" pattern="[A-Za-z0-9]{10,25}" required>
-  <button id="btnBuscar">Cerca (v6)</button>
+  <button id="btnBuscar">Cerca (v7)</button>
 </div>
 
 <div id="estado"></div>
+<details style="margin-top:10px">
+  <summary>codi rebut</summary>
   <div id="debug"></div>
+</details>
 
 <script>
 (function(){
