--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="row">
   <input id="refcat" pattern="[A-Za-z0-9]{10,25}" required>
-  <button id="btnBuscar">Cerca (v3)</button>
+  <button id="btnBuscar">Cerca (v8)</button>
 </div>
 
 <div id="estado"></div>
@@ -132,7 +132,7 @@
 
       setEstado('Obrint el visor centrat a la referència cadastral…');
       // Abrimos en el mismo top (por si está embebido en EB)
-      window.open(url, '_blank'); // antes: window.location.href = url; // no funciona: window.top.location.href = url;
+      window.top.location.href = url;
 
     }catch(e){
       console.error(e);
